--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,32 @@
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    
   </head>
+  
+  <!--heder-->
+  
+ <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
+   <!-- <h5 class="my-0 mr-md-auto font-weight-normal">Company name</h5> -->
+   <%= link_to root_path,class:"my-0 mr-md-auto font-weight-normal" do %>
+   <h5>Two selection</h5>
+   <% end %>
+   
+   <% if user_signed_in? %>
+   <nav class="my-2 my-md-0 mr-md-3">
+     <%= link_to "posts",users_path,class:"p-2 text-dark" %>
+     <%= link_to "users",posts_path,class:"p-2 text-dark" %>
+       <%= link_to "ログアウト",destroy_user_session_path,method: :delete,class:"fas fa-sign-out-alt btn btn-outline-primary" %>
+  <% else %>
+   <%= link_to "about",homes_about_path,class:"p-2 text-dark" %>
+    <%= link_to "サインイン",new_user_session_path,class:"p-2 text-dark" %>
+    <%= link_to "ログイン",new_user_registration_path,class:"p-2 text-dark" %>
+
+  </nav>
+
+   　<% end %>
+ </div>
+  
 
   <body>
     <%= yield %>
